--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,8 +22,5 @@
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
-  "launch_handler": {
-    "route-to": "existing-client-retain"
-  },
-  "capture_links": "existing-client-retain"
+  "capture_links": "existing-client-event"
 }
