--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,12 +28,21 @@
       "url": "/#%s"
     },
     {
-      "protocol": "web+testhandler2",
+      "protocol": "web+testhandlertwo",
       "url": "#%s"
     },
     {
-      "protocol": "web+testhandler3",
+      "protocol": "web+testhandlerthree",
       "url": "%s"
     }
-  ]
+  ],
+  "share_target": {
+    "action": "/share-target/",
+    "method": "GET",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url"
+    }
+  }
 }
