--- a/public/manifest.json
+++ b/public/manifest.json
@@ -37,7 +37,7 @@
     }
   ],
   "share_target": {
-    "action": "/share-target/",
+    "action": "/index.html",
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
