--- a/public/manifest.json
+++ b/public/manifest.json
@@ -37,13 +37,13 @@
     }
   ],
   "share_target": {
-    "action": "/index.html",
+    "action": "/",
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
+      "title": "share-title",
+      "text": "x-text",
+      "url": "z-url"
     }
   }
 }
