--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,9 +41,9 @@
     "method": "POST",
     "enctype": "multipart/form-data",
     "params": {
-      "title": "share-title",
-      "text": "x-text",
-      "url": "z-url"
+      "title": "shareTitle",
+      "text": "xText",
+      "url": "zUrl"
     }
   }
 }
